add TopicControllerTest